[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/ShyGraph/Inspector/SlotControl.gd" type="Script" id=1]

[node name="SlotControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 204, 20 )
script = ExtResource( 1 )

[node name="Show" type="Button" parent="."]
anchor_right = 1.0
margin_bottom = 20.0
toggle_mode = true

[node name="Box" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
margin_top = 25.0

[node name="Active" type="CheckButton" parent="Box"]
margin_right = 1024.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Enabled"

[node name="Type" type="OptionButton" parent="Box"]
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 64.0
text = "Type"

[node name="Side" type="OptionButton" parent="Box"]
margin_top = 68.0
margin_right = 1024.0
margin_bottom = 88.0
text = "Side"

[node name="Allign" type="OptionButton" parent="Box"]
margin_top = 92.0
margin_right = 1024.0
margin_bottom = 112.0
text = "Allignment"

[node name="Anchor" type="HBoxContainer" parent="Box"]
margin_top = 116.0
margin_right = 1024.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="Box/Anchor"]
margin_top = 5.0
margin_right = 53.0
margin_bottom = 19.0
text = "Anchor: "

[node name="AnchorPath" type="LineEdit" parent="Box/Anchor"]
margin_left = 57.0
margin_right = 1024.0
margin_bottom = 24.0
hint_tooltip = "NodePath to a child node to anchor the slot to it."
size_flags_horizontal = 3

[node name="Offset" type="Control" parent="Box"]
margin_top = 144.0
margin_right = 1024.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 48 )

[node name="OffsetX" type="SpinBox" parent="Box/Offset"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 48.0
min_value = -256.0
max_value = 256.0
rounded = true
allow_greater = true
allow_lesser = true
prefix = "X: "
suffix = "px"

[node name="OffsetY" type="SpinBox" parent="Box/Offset"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
min_value = -256.0
max_value = 256.0
rounded = true
allow_greater = true
allow_lesser = true
prefix = "Y: "
suffix = "px"

[node name="Label" type="Label" parent="Box/Offset"]
anchor_bottom = 1.0
margin_right = 40.0
text = "Offset:"
valign = 1

[node name="Size" type="Control" parent="Box"]
margin_top = 196.0
margin_right = 1024.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 48 )

[node name="SizeX" type="SpinBox" parent="Box/Size"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 48.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true
prefix = "X: "

[node name="SizeY" type="SpinBox" parent="Box/Size"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0
allow_greater = true
allow_lesser = true
prefix = "Y: "

[node name="Label" type="Label" parent="Box/Size"]
anchor_bottom = 1.0
text = "Size: "
valign = 1

[connection signal="toggled" from="Show" to="." method="_on_Show_toggled"]
